vikunja-k8s/vikunja-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: vikunja
  name: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vikunja
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: vikunja
    spec:
      nodeName: bigman
      containers:
        - name: vikunja
          image: docker.io/vikunja/vikunja:2.7.0
          # image: docker.io/vikunja/vikunja:2.3.0
          ports:
            - containerPort: 3456
              protocol: TCP
          volumeMounts:
            - mountPath: /app/vikunja/files
              name: files
        # - name: cloudflared
        #   env:
        #   - name: TUNNEL_TOKEN
        #     valueFrom:
        #       secretKeyRef:
        #         name: vikunja-secrets
        #         key: TUNNEL_TOKEN
        #   image: docker.io/cloudflare/cloudflared:2025.10.0
        #   command:
        #     # Configures tunnel run parameters
        #     - cloudflared
        #     - tunnel
        #     - --no-autoupdate
        #     - run
        #   livenessProbe:
        #     httpGet:
        #       # Cloudflared has a /ready endpoint which returns 200 if and only if
        #       # it has an active connection to Cloudflare's network.
        #       path: /ready
        #       port: 2000
        #     failureThreshold: 1
        #     initialDelaySeconds: 10
        #     periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: files
