vikunja-k8s/vikunja-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: vikunja
  name: vikunja
spec:
  ports:
    - name: "http"
      port: 3456
      targetPort: 3456
  selector:
    io.kompose.service: vikunja
